@@ -8,9 +8,3 @@ class IJSONSearch(Interface):
 
     def getSearchResults(self, filter_portal_types, searchtext):
         """Returns the actual search results"""
-
-    def getInfoFromBrain(self, brain):
-        """
-        Gets information from a brain
-        id, url, portal_type, title, icon, is_folderish
-        """
