@@ -5,6 +5,9 @@ HISTORY
 1.1rc5 (unreleased)
 -------------------
 
+- Removed getInfoFromBrain method in JSONFolderListing and JSONSearch.
+  [robgietema]
+
 - Added support for comment nodes in Generic Setup.
   [robgietema]
 
